--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <script type="module">
         // TypeScript 모듈에서 클래스들을 import
-        import { KollusUploadAPI, UploadProgressMonitor, KollusUtils } from './dist/index.js';
+        import { KollusUploadAPI, UploadProgressMonitor, KollusUtils } from './index.js';
 
         let api;
         let uploadUrl = '';
